# NovelForge

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  main.py  navly-rewriter-proxy.conf  pyproject.toml  requirements.txt
static/: app.js
templates/: admin.html  login.html  rewrite.html
